@@ -3624,3 +3624,4 @@
          patch #3258533) (Sergio Baldovi).
 20110501 man/fuse.1: Fix typo (AY-3-8192 -> AY-3-8912) (Stuart).
 20110501 ChangeLog,README,man/fuse.1: Fix typos (Stuart).
+20110501 sound.c: enable SpecDrum on both channels when using stereo (Stuart).
